Ajuste e criação de modulos e paginas novas.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@fortawesome/angular-fontawesome": "^0.3.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.14",
     "@fortawesome/free-solid-svg-icons": "^5.7.1",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.2",
+    "@ng-select/ng-select": "^2.15.2",
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
